product viculada con la bd pero aun no esta conectada con el index

--- a/public/pages/header.html
+++ b/public/pages/header.html
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="../pages/iniciarSesion.html" target="modal" class="login" id="btn-login" onclick="abrirVentanaEmergente()">
+                    <a href="../pages/iniciarSesion.html" target="pages" class="login" id="btn-login" onclick="abrirVentanaEmergente()">
                         <div class="txt-iniciar-sesion">Iniciar sesion</div>
                         <div class="para-administradores">Para Administradores</div>
                         <img class="user-img" src="../img/header/user.png" />
@@ -64,7 +64,7 @@
                         <a href="../pages/home.html" target="pages">Inicio</a>
                     </li>
                     <li>
-                        <a href="../pages/productPage.html" target="pages">Productos</a>
+                        <a href="/views/productPage.ejs" target="pages">Productos</a>
                     </li>
                     <li>
                         <a href="../pages/home.html#section-aboutus" target="pages">¿Quienes somos?</a>
