productPage conectada con base de datos

--- a/public/pages/header.html
+++ b/public/pages/header.html
@@ -64,7 +64,7 @@
                         <a href="../pages/home.html" target="pages">Inicio</a>
                     </li>
                     <li>
-                        <a href="/views/productPage.ejs" target="pages">Productos</a>
+                        <a href="http://localhost:3000/productPage" target="pages">Productos</a>
                     </li>
                     <li>
                         <a href="../pages/home.html#section-aboutus" target="pages">¿Quienes somos?</a>
@@ -91,7 +91,7 @@
                 <img class="logo-mobile-navbar" src="../img/header/img-logo-mobile.png" />
                 <a href="../pages/home.html">Inicio</a>
                 <a href="../pages/home.html">¿Quienes Somos?</a>
-                <a href="../pages/productPage.html">Productos</a>
+                <a href="http://localhost:3000/productPage" target="pages">Productos</a>
                 <a href="../pages/home.html">Contactanos</a>
                 <a href="../pages/iniciarSesion.html" class="login" id="btn-login" onclick="abrirVentanaEmergente()">
                     <div class="txt-iniciar-sesion">Iniciar sesion</div>
